...
    android:background="@drawable/tommy"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="Sign in"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrong"
        android:layout_below="@id/signin"
        android:text="Wrong username/password. Try again."
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wrong"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
...
