...
    <RelativeLayout
        android:id="@+id/profilesection"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profileButton"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/viewpro"
            android:backgroundTint="@color/uscRed"
...
            android:layout_marginRight="10dp"
            android:background="@drawable/noti_icon"
            android:backgroundTint="@color/uscRed"
            android:onClick="onClickNotification" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/profileButton"
            android:text="VIEW PROFILE"
            android:textColor="@color/uscRed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickProfile"/>


...
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/uscmap" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="135dp"
            android:background="@drawable/gymicon"
            android:onClick="onClickLyon" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="269dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/gymicon"
            android:onClick="onClickVill" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

            <TextView
                android:id="@+id/summarybtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:onClick="onClickSummary"
                android:text="UPCOMING BOOKINGS"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:onClick="onClickSummary"
...
