...
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/booking_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="top|left"
            android:onClick="onClickMap"
...
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Today"
            android:layout_marginRight="5dp"
            android:onClick="onClickToday"/>
        <Button
            android:id="@+id/tomorrowbutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:text="Second"
            android:onClick="onClickSecond"/>
        <Button
...
