...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.uscrecapp_team28.Activity.BookingInformationActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/returnButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:onClick="onClickReturn"
...
